02-tests/network-policy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: poc-netpol
  labels:
    app: poc-netpol
